@@ -1,3 +1,10 @@
+2012-01-06 Borut Razem <borut.razem AT gmail.com>
+
+	* packages/build.bison, packages/build.bison/download,
+	  packages/build.bison/Makefile: added
+	* packages/build.automake/Makefile, packages/build.autoconf/Makefile:
+          updated versions: automake-1.11, autoconf-2.68
+
 2012-01-05 Borut Razem <borut.razem AT gmail.com>
 
 	* packages/build.readline/Makefile, packages/build.ncurses/Makefile,
